--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libyang
 Section: libs
 Homepage: https://netopeer.liberouter.org/
-Maintainer: David Lamparter <equinox-debian@diac24.net>
+Maintainer: Yohan Pipereau <ypiperea@cisco.com>
 Uploaders: CESNET <rkrejci@cesnet.cz>
 Priority: optional
 Standards-Version: 4.2.1
